--- a/src/main/webapp/Report/HtmReport/doPrintOrderCode.htm
+++ b/src/main/webapp/Report/HtmReport/doPrintOrderCode.htm
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>PrintBoxCode</title>
+    <title>PrintOrderCode</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <script src="../CreateControl.js" type="text/javascript"></script>
     <script src="../GRInstall.js" type="text/javascript"></script>
